RESOLVED FIXED281003
REGRESSION(284617@main): Assertion fires when rendering an HDR image is partially displayed
https://bugs.webkit.org/show_bug.cgi?id=281003
Summary REGRESSION(284617@main): Assertion fires when rendering an HDR image is parti...
Said Abou-Hallawa
Reported 2024-10-07 15:08:59 PDT
An assertion may fire with certain window sizes when opening https://ccameron-chromium.github.io/hdr-jpeg/index.html. After 284617@main, GraphicsContextCG::drawNativeImageInternal() has two calls to CGContextStateSaver::save(). The first one is called before clipping the context to partially display the image. The second one is called before setting the headroom of an HDR image. If these two calls happen in the same session, the second call will fire the assertion `ASSERT(!m_saveAndRestore);` in CGContextStateSaver::save().
Attachments
Said Abou-Hallawa
Comment 1 2024-10-07 15:09:25 PDT
Said Abou-Hallawa
Comment 2 2024-10-07 15:31:50 PDT
EWS
Comment 3 2024-10-07 18:25:54 PDT
Committed 284798@main (58072722f0cc): <https://commits.webkit.org/284798@main> Reviewed commits have been landed. Closing PR #34798 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.