REGRESSION(284617@main): Assertion fires when rendering an HDR image is partially displayed https://bugs.webkit.org/show_bug.cgi?id=281003 rdar://137402152

Reviewed by Mike Wyrzykowski.

In GraphicsContextCG::drawNativeImageInternal(), the state of CGContext may not
been saved before setting the headroom to the headroom of a CGImage.

In this case we need to explicitly restore the old headroom to CGContext before
exiting this function.

* Source/WebCore/platform/graphics/cg/GraphicsContextCG.cpp:
(WebCore::GraphicsContextCG::drawNativeImageInternal):

Canonical link: https://commits.webkit.org/284798@main